--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -470,6 +470,7 @@ figcaption
 
 .tabs-b__content-item 
   background-image: url(../assets/curso/temas/58.png)
+  background-color: #E8E8E8
   background-repeat: no-repeat
   background-size: cover
   background-position: center    
@@ -586,3 +587,7 @@ figcaption
 
 .t2
   color: #2674FA  
+
+.bgy
+  background-color: #FAE1AA
+  border-radius: 10px  
